<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="selected" />

    <item
        android:id="@+id/nav_collections"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_collections"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="selected" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="selected" />

</menu>