<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_logout_all_local_data_will_be_deleted"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:stateListAnimator="@null"
        android:text="@string/no"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="13sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/yesButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:rippleColor="?attr/colorSecondary"
        app:strokeColor="?attr/colorOnSecondary"
        app:cornerRadius="8dp"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:stateListAnimator="@null"
        android:text="@string/yes"
        android:textColor="?attr/colorOnSecondary"
        app:cornerRadius="8dp"
        android:textSize="13sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/noButton"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:rippleColor="?attr/colorSecondary"
        app:strokeColor="?attr/colorOnSecondary"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>